# checkers

./: .gitignore  LICENSE  README.md  checkers.cabal  stack.yaml
app/: Main.hs
src/: Database.hs  DatabaseProcessing.hs  GraphicsProcessing.hs  Graphics_processing.hs  Types.hs  WorldProcessing.hs  World_processing.hs
test/: Spec.hs
