name:                checkers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/cmc-haskell-2016/checkers#readme
license:             BSD3
license-file:        LICENSE
author:              Untitled 1 Team
maintainer:          checkers@example.com
copyright:           2016 checkers Team
category:            Experimental
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options: -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib, Types, World_processing, Graphics_processing
  build-depends:       base >= 4.7 && < 5, gloss >= 1.8.0, gloss-rendering == 1.9.3.*
  default-language:    Haskell2010

executable checkers
  ghc-options: -Wall
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , checkers
                     , gloss
  default-language:    Haskell2010

test-suite checkers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , checkers
                     , gloss
                     , bmp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2016/checkers
